{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 30,
  "lineage": "98f152fb-177b-7a1b-9fb1-d757e2386d34",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08682272ac4f3b6e2",
            "arn": "arn:aws:ec2:ap-southeast-2:992382593855:elastic-ip/eipalloc-08682272ac4f3b6e2",
            "association_id": "eipassoc-0954c41c88aed45f4",
            "domain": "vpc",
            "id": "eipalloc-08682272ac4f3b6e2",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0a9700c4954e090b4",
            "private_dns": "ip-192-168-1-35.ap-southeast-2.compute.internal",
            "private_ip": "192.168.1.35",
            "public_dns": "ec2-13-238-229-207.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.238.229.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "testing",
              "Name": "simple-ecsbg-nat-eip"
            },
            "tags_all": {
              "Environment": "testing",
              "Name": "simple-ecsbg-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:992382593855:internet-gateway/igw-027d408fdbf63435d",
            "id": "igw-027d408fdbf63435d",
            "owner_id": "992382593855",
            "tags": {
              "Environment": "testing",
              "Name": "simple-ecsbg-igw"
            },
            "tags_all": {
              "Environment": "testing",
              "Name": "simple-ecsbg-igw"
            },
            "vpc_id": "vpc-00bfed043468c1f82"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08682272ac4f3b6e2",
            "association_id": "eipassoc-0954c41c88aed45f4",
            "connectivity_type": "public",
            "id": "nat-0877c57845b03f141",
            "network_interface_id": "eni-0a9700c4954e090b4",
            "private_ip": "192.168.1.35",
            "public_ip": "13.238.229.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b2332a1d7cdd2f9d",
            "tags": {
              "Environment": "testing",
              "Name": "simple-ecsbg-nat-gw"
            },
            "tags_all": {
              "Environment": "testing",
              "Name": "simple-ecsbg-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:992382593855:route-table/rtb-065704001f69ee61c",
            "id": "rtb-065704001f69ee61c",
            "owner_id": "992382593855",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0877c57845b03f141",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "testing",
              "Name": "simple-ecsbg-private-rt"
            },
            "tags_all": {
              "Environment": "testing",
              "Name": "simple-ecsbg-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00bfed043468c1f82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:992382593855:route-table/rtb-0bb67a1211afb5d11",
            "id": "rtb-0bb67a1211afb5d11",
            "owner_id": "992382593855",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-027d408fdbf63435d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "testing",
              "Name": "simple-ecsbg-public-rt"
            },
            "tags_all": {
              "Environment": "testing",
              "Name": "simple-ecsbg-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00bfed043468c1f82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aba46e7e05e55aeb",
            "route_table_id": "rtb-065704001f69ee61c",
            "subnet_id": "subnet-042a65617ab217e13"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb630ddfc1bd8b7a",
            "route_table_id": "rtb-065704001f69ee61c",
            "subnet_id": "subnet-030e2e21ac9753e20"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2a1990937e0aa6d",
            "route_table_id": "rtb-0bb67a1211afb5d11",
            "subnet_id": "subnet-0b2332a1d7cdd2f9d"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0200a4fe64af95987",
            "route_table_id": "rtb-0bb67a1211afb5d11",
            "subnet_id": "subnet-060d599d62c4ac7da"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:992382593855:subnet/subnet-042a65617ab217e13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042a65617ab217e13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382593855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "Name": "simple-ecsbg-private-subnet-1"
            },
            "tags_all": {
              "Environment": "testing",
              "Name": "simple-ecsbg-private-subnet-1"
            },
            "vpc_id": "vpc-00bfed043468c1f82"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:992382593855:subnet/subnet-030e2e21ac9753e20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030e2e21ac9753e20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382593855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "Name": "simple-ecsbg-private-subnet-2"
            },
            "tags_all": {
              "Environment": "testing",
              "Name": "simple-ecsbg-private-subnet-2"
            },
            "vpc_id": "vpc-00bfed043468c1f82"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:992382593855:subnet/subnet-0b2332a1d7cdd2f9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2332a1d7cdd2f9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382593855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "Name": "simple-ecsbg-public-subnet-1"
            },
            "tags_all": {
              "Environment": "testing",
              "Name": "simple-ecsbg-public-subnet-1"
            },
            "vpc_id": "vpc-00bfed043468c1f82"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:992382593855:subnet/subnet-060d599d62c4ac7da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060d599d62c4ac7da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382593855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "Name": "simple-ecsbg-public-subnet-2"
            },
            "tags_all": {
              "Environment": "testing",
              "Name": "simple-ecsbg-public-subnet-2"
            },
            "vpc_id": "vpc-00bfed043468c1f82"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:992382593855:vpc/vpc-00bfed043468c1f82",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0fc73edea45727a08",
            "default_route_table_id": "rtb-0de3e8e7f22dcf095",
            "default_security_group_id": "sg-0b16eceaa948675c6",
            "dhcp_options_id": "dopt-0926690b1b1438588",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00bfed043468c1f82",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de3e8e7f22dcf095",
            "owner_id": "992382593855",
            "tags": {
              "Environment": "testing",
              "Name": "simple-ecsbg-vpc"
            },
            "tags_all": {
              "Environment": "testing",
              "Name": "simple-ecsbg-vpc"
            }
          }
        }
      ]
    }
  ]
}